# fast_zero2

./: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 54a7506c80c5_create_users_table.py  6edbdd0b2f39_exercicio_02_aula_04.py  dd52e0e0bffb_adiciona_created_at_e_updated_at_na_.py  fdbbafbe32cf_create_todos_table.py
src/core/: app.py  database.py  models.py  schemas.py  security.py  settings.py
src/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
