[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Ailton teles xavier",email = "atxshared@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
